--- a/medlabbloodbank/templates/mainuser/activities.html
+++ b/medlabbloodbank/templates/mainuser/activities.html
@@ -112,6 +112,9 @@
                         <li>
                             <a href="{% url 'appointments' %}"><i class="fa fa-hospital-o"></i> <span>View Appointements</span></a>
                         </li>
+                        <li>
+                            <a href="{% url 'bloodinventory' %}"><i class="fa fa-hospital-o"></i> <span>Blood Inventory</span></a>
+                        </li>
 						
                     </ul>
                 </div>
