--- a/medlabbloodbank/templates/mainuser/registereddonortable.html
+++ b/medlabbloodbank/templates/mainuser/registereddonortable.html
@@ -179,6 +179,9 @@
                         <li>
                             <a href="{% url 'appointments' %}"><i class="fa fa-hospital-o"></i> <span>View Appointements</span></a>
                         </li>
+                        <li>
+                            <a href="{% url 'bloodinventory' %}"><i class="fa fa-hospital-o"></i> <span>Blood Inventory</span></a>
+                        </li>
 						<li class="submenu">
 							<a href="#"><i class="fa fa-user"></i> <span>Staffs </span> <span class="menu-arrow"></span></a>
 							<ul style="display: none;">
