--- a/medlabbloodbank/templates/mainuser/registeredhospitaltable.html
+++ b/medlabbloodbank/templates/mainuser/registeredhospitaltable.html
@@ -19,7 +19,7 @@
         <style>
             /* Reduce the padding of table cells */
             .table th, .table td {
-                padding: 6px 10px;
+                padding: 6px 5px;
             }
         
             /* Reduce the font size of table headers */
@@ -30,7 +30,7 @@
         
             /* Reduce the font size of table data */
             .table tbody td {
-                font-size: 12px;
+                font-size: 11px;
             }
 
             .table tbody tr:nth-child(odd) {
@@ -44,7 +44,7 @@
             .sidebar {
                 box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
                 top: 50px;
-                width: 230px;
+                width: 210px;
                 z-index: 1039;
                 background-color: #d4a5a5;
                 bottom: 0;
@@ -109,6 +109,20 @@
             .sidebar-menu ul ul a.active {
                 color: #009efb;
                 text-decoration: underline;
+            }
+            .status-active {
+                background-color: #4CAF50; /* Green color */
+                color: white;
+                padding: 4px 8px;
+                border-radius: 4px;
+            }
+            
+            /* Define the style for Inactive status */
+            .status-inactive {
+                background-color: #FF5733; /* Red color */
+                color: white;
+                padding: 4px 8px;
+                border-radius: 4px;
             }
         </style>   
   
@@ -221,9 +235,15 @@
                 <h3 style="color: #a16767;margin-top: 20px;">Registered Hospitals</h3>
             </div>
             <div class="row">
-                <div class="col-sm-11 col-9 text-right m-b-20">
-                    <a href="{% url 'hospitalregistration' %}" class="btn btn btn-success btn-rounded float-right"><i class="fa fa-plus"></i> Add Hospital</a>
+                <div class="col-md-12">
+                    <div class="text-right m-b-20">
+                        
+                        <button id="toggle-active" class="btn btn-primary btn-rounded"><i class="fa fa-filter"></i> Show Active Hospitals</button>
+                       
+                        <a href="{% url 'hospitalregistration' %}" class="btn btn-success btn-rounded"><i class="fa fa-plus"></i> Add Hospital</a>
+                    </div>
                 </div>
+                
                 <div class="col-md-12">
                     <div class="table-responsive">
                         <table class="table table-bordered table-striped custom-table datatable mb-0">
@@ -242,7 +262,7 @@
                             </thead>
                             <tbody>
                                 {% for hospital in hospitals %}
-                                <tr>
+                                <tr class="hospital-row">
                                     <td>{{ hospital.hospitalName }}</td>
                                     <td>{{ hospital.contactPerson }}</td>
                                     <td>{{ hospital.email }}</td>
@@ -250,12 +270,19 @@
                                     <td>{{ hospital.location }}</td>
                                     <td>{{ hospital.gpsCoordinates }}</td>
                                     <td>{{ hospital.ownership }}</td>
-                                    <td>{{ hospital.status }}</td>
+                                    <td>
+                                    {% if hospital.status == "Active" %}
+                                    <span class="status-active">{{ hospital.status }}</span>
+                                    {% else %}
+                                    <span class="status-inactive">{{ hospital.status }}</span>
+                                    {% endif %}</td>
                                     <td class="text-right">
                                         <div class="dropdown dropdown-action">
                                             <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
                                             <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="{% url 'hospitalregistration' %}"><i class="fa fa-pencil m-r-5"></i> Edit</a>
+                                                <a href="#" class="dropdown-item"><i class="fa fa-pencil m-r-5"></i>Edit</a>
+
+                                                {% comment %} <a class="dropdown-item" ><i class="fa fa-pencil m-r-5"></i> Edit</a> {% endcomment %}
                                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delete_hospital_{{ hospital.id }}"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
                                             </div>
                                         </div>
@@ -269,7 +296,7 @@
                                                 <img src="{% static 'mainuser/img/sent.png' %}" alt="" width="50" height="46">
                                                 <h3>Are you sure you want to delete {{ hospital.hospitalName }}?</h3>
                                                 <div class="m-t-20">
-                                                    <a href="#" class="btn btn-white" data-dismiss="modal">Close</a>
+                                                    <a href="{% static 'registeredhospitaltable' %}" class="btn btn-white" data-dismiss="modal">Close</a>
                                                     <button type="button" class="btn btn-danger delete-hospital" data-hospital-id="{{ hospital.id }}">Delete</button>
 
                                                     
@@ -327,6 +354,27 @@
         });
     });
 </script>
+<script>
+    $(document).ready(function () {
+        // Initially, show all hospitals
+        $(".hospital-row").show();
+        
+        $("#toggle-active").click(function () {
+            var buttonText = $(this).text();
+            
+            // Toggle button text and action
+            if (buttonText.includes("Active")) {
+                $(this).text("Show All Hospitals");
+                // Hide inactive hospitals
+                $(".status-inactive").closest("tr").hide();
+            } else {
+                $(this).text("Show Active Hospitals");
+                // Show all hospitals
+                $(".hospital-row").show();
+            }
+        });
+    });
+    </script>
 
     
 </body>
