--- a/medlabbloodbank/templates/mainuser/add-hospitals.html
+++ b/medlabbloodbank/templates/mainuser/add-hospitals.html
@@ -170,7 +170,7 @@
                             <a href="{% url 'registereddonortable' %}"><i class="fa fa-wheelchair"></i> <span>Registered Donors</span></a>
                         </li>
                         <li class="active">
-                            <a href="{% url 'registeredhospitaltable' %}"><i class="fa fa-calendar"></i> <span>Add Hospitals</span></a>
+                            <a href="{% url 'registeredhospitaltable' %}"><i class="fa fa-hospital-o"></i> <span>Add Hospitals</span></a>
                         </li>
                         <!-- <li>
                             <a href="doctors.html"><i class="fa fa-calendar-check-o"></i> <span>Staffs</span></a>
@@ -179,7 +179,7 @@
                             <a href="{% url 'departments' %}"><i class="fa fa-hospital-o"></i> <span>Blood Bank Camps</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'appointments' %}"><i class="fa fa-hospital-o"></i> <span>View Appointements</span></a>
+                            <a href="{% url 'appointments' %}"><i class="fa fa-list-alt"></i> <span>View Appointements</span></a>
                         </li>
                         <li>
                             <a href="{% url 'bloodinventory' %}"><i class="fa fa-hospital-o"></i> <span>Blood Inventory</span></a>
