--- a/medlabbloodbank/templates/mainuser/activities.html
+++ b/medlabbloodbank/templates/mainuser/activities.html
@@ -103,14 +103,14 @@
                             <a href="{% url 'registereddonortable' %}"><i class="fa fa-wheelchair"></i> <span>Registered Donors</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'addhospitals' %}"><i class="fa fa-calendar"></i> <span>Add Hospitals</span></a>
+                            <a href="{% url 'addhospitals' %}"><i class="fa fa-hospital-o"></i> <span>Add Hospitals</span></a>
                         </li>
                       
                         <li>
                             <a href="{% url 'departments' %}"><i class="fa fa-hospital-o"></i> <span>Blood Bank Camps</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'appointments' %}"><i class="fa fa-hospital-o"></i> <span>View Appointements</span></a>
+                            <a href="{% url 'appointments' %}"><i class="fa fa-list-alt"></i> <span>View Appointements</span></a>
                         </li>
                         <li>
                             <a href="{% url 'bloodinventory' %}"><i class="fa fa-hospital-o"></i> <span>Blood Inventory</span></a>
