--- a/medlabbloodbank/templates/mainuser/registereddonortable.html
+++ b/medlabbloodbank/templates/mainuser/registereddonortable.html
@@ -162,10 +162,10 @@
                             <a href="{% url 'adminindex' %}"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                         </li>
 						<li>
-                            <a href="{% url 'doctors' %}"><i class="fa fa-user-md"></i> <span>Donors</span></a>
+                            <a href="{% url 'doctors' %}"><i class="fa fa-users"></i> <span>Donors</span></a>
                         </li>
                         <li class="active">
-                            <a href="{% url 'registereddonortable' %}"><i class="fa fa-wheelchair"></i> <span>Registered Donors</span></a>
+                            <a href="{% url 'registereddonortable' %}"><i class="fa fa-registered"></i> <span>Registered Donors</span></a>
                         </li>
                         <li>
                             <a href="{% url 'registeredhospitaltable' %}"><i class="fa fa-hospital-o"></i> <span>Add Hospitals</span></a>
@@ -180,7 +180,7 @@
                             <a href="{% url 'appointments' %}"><i class="fa fa-list-alt"></i> <span>View Appointements</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'bloodinventory' %}"><i class="fa fa-hospital-o"></i> <span>Blood Inventory</span></a>
+                            <a href="{% url 'bloodinventory' %}"><i class="fa fa-tint"></i> <span>Blood Inventory</span></a>
                         </li>
 						<li class="submenu">
 							<a href="#"><i class="fa fa-user"></i> <span>Staffs </span> <span class="menu-arrow"></span></a>
