--- a/medlabbloodbank/templates/mainuser/bloodinventory.html
+++ b/medlabbloodbank/templates/mainuser/bloodinventory.html
@@ -83,18 +83,21 @@
 		}.blood-inventory {
             text-align: center;
         }
+        .row {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
 
-        .blood-type-box {
-            background-color: #a30a1a;
-            padding: 10px;
+        .blood-group-box {
+            background-color: #b31923;
+            color: white;
+            padding: 20px;
             margin: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            text-align: center;
-            width: 170px;
-            height:110px;
-            color:white;
-            display: inline-block;
+            font-size:20px;
+            border-radius:5px;
+            height:100px;
+            flex-basis: calc(25% - 20px); /* 25% width with 20px margin on each side */
         }
 	</style>   
 
@@ -208,7 +211,20 @@
         </div>
         <div class="page-wrapper">
             <div class="content">
-                
+                <button id="addBloodGroupBtn"  class="btn btn btn-success btn-rounded float-right" onclick="location.href='{% url 'addnewgroup' %}'">Add Blood Group</button>
+                <h1>Blood Groups</h1>
+                <div class="row">
+                    {% for blood_type in blood_types %}
+                        <div class="blood-group-box">
+                            {{ blood_type.blood_type }}
+                        </div>
+                        {% if forloop.counter|divisibleby:4 %}
+                            </div><div class="row">
+                        {% endif %}
+                    {% empty %}
+                        <p>No blood groups available.</p>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
