--- a/medlabbloodbank/templates/mainuser/add-hospitals.html
+++ b/medlabbloodbank/templates/mainuser/add-hospitals.html
@@ -170,7 +170,7 @@
                             <a href="{% url 'registereddonortable' %}"><i class="fa fa-registered"></i> <span>Registered Donors</span></a>
                         </li>
                         <li class="active">
-                            <a href="{% url 'registeredhospitaltable' %}"><i class="fa fa-hospital-o"></i> <span>Add Hospitals</span></a>
+                            <a href=""><i class="fa fa-hospital-o"></i> <span>Add Hospitals</span></a>
                         </li>
                         <!-- <li>
                             <a href="doctors.html"><i class="fa fa-calendar-check-o"></i> <span>Staffs</span></a>
