--- a/medlabbloodbank/templates/mainuser/hospitalregistration.html
+++ b/medlabbloodbank/templates/mainuser/hospitalregistration.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'mainuser/img/favicon.ico' %}">
     <title>Medlab Blood Bank</title>
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/font-awesome.min.css' %}">
@@ -199,12 +199,16 @@
             <div class="content">
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
-                        <h4 class="page-title">Hospital Registration</h4>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="page-title">Hospital Registration</h4>
+                            <!-- Add the button for viewing registered hospitals -->
+                       
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
-                        <form action="" method="POST">
+                        <form action="{% url 'hospital_registration' %}" method="POST">
                             {% csrf_token %}
                             <div class="row">
                                 <div class="col-sm-6">
